--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,9 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.hibernate.ddl-auto=update
 
+store.created=Store {0} created successfully.
+store.updated=Store {0} updated successfully.
+store.not.found=Store not found with ID {0}.
+store.user.not.found=Store not found for user ID {0}.
