--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ store.created=Store  created successfully.
 store.updated=Store {0} updated successfully.
 store.not.found=Store not found with ID {0}.
 store.user.not.found=Store not found for user ID {0}.
+
+required.field=This field is required.
