--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,6 @@ store.updated=Store {0} updated successfully.
 store.not.found=Store not found with ID {0}.
 store.user.not.found=Store not found for user ID {0}.
 
-required.field= name field is required.
+
+required.field=This field is required.
+field.toolong=The input is too long. Maximum length allowed is {0}.
