--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ store.user.not.found=Store not found for user ID {0}.
 
 
 required.field=This field is required.
-field.toolong=The input is too long. Maximum length allowed is {0}.
+field.toolong=The input is too long. 
