--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,6 +1,5 @@
-store.created=Store {0} created successfully.
-store.updated=Store {0} updated successfully.
-store.not.found=Store not found with ID {0}.
-store.user.not.found=Store not found for user ID {0}.
-required.field=This field is required.
-field.toolong=The input is too long. Maximum length allowed is {0}.
+
+store.created=Store  created successfully.
+
+required.field= field is required.
+field.toolong=  is too long.
