--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -2,4 +2,4 @@
 store.created=Store  created successfully.
 
 required.field= field is required.
-field.toolong=  is too long.
+field.too.long=  is too long.
