--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,5 +1,5 @@
 
-store.created=Store created successfully.
-store.deleted=Store deleted successfully.
+store.created=Store {0} created successfully.
+store.deleted=Store {0} deleted successfully.
 required.field= field is required.
 field.too.long=  is too long.
