--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -2,4 +2,4 @@
 store.created=Store {0} created successfully.
 store.deleted=Store {0} deleted successfully.
 required.field= field is required.
-field.too.long=  is too long.
+field.too.long=  ++ is too long.
