--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.26</version> <!-- Use the version compatible with your MySQL server -->
         </dependency>
-
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.4</version> <!-- Use the latest version -->
+        </dependency>
     </dependencies>
 
     <build>
