--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,3 +1,19 @@
-required.field= field is required.
-field.too.long= is too long.It should be between 0 to {0}.
-field.invalidEmail=is Invalid.
+
+storeStatus.required.field         =store status is required.
+storeName.required.field           =store name is required.
+storeEmail.required.field          =Email is required.
+storeTitle.required.field          =store title is required.
+storeIconPath.required.field       =Icon Path is required.
+storeAddress.required.field        =store address is required.
+storyTitle.required.field          =story title is required.
+storyDescription.required.field    =story description is required.
+messageToBuyers.required.field     =Message to buyers field is required.
+field.too.long                     =It should be between 0 to {0}.
+field.invalidEmail                 =Please enter valid email.
+
+
+unique.storeName                   =Store name already exists.
+unique.email                       =Email already exists.
+store.notFound                     =Store not found.
+user.notFound                      =User not found.
+store.notAvailable                 =Store not  available.
